<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brandon.transblink.MainActivity"
    style="@style/Theme.AppCompat.Light.DarkActionBar"
    android:background="?android:attr/colorPrimaryDark">

    <Button
        android:text="@string/btnNearest"
        android:onClick="goToNearestStation"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoToNearestStation"
        android:background="@drawable/button_selector"
        android:textColor="?android:attr/colorAccent"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/buttonGoToStationChoosing"
        android:layout_alignStart="@+id/buttonGoToStationChoosing"
        android:textSize="24sp" />

    <Button
        android:text="@string/btnThemes"
        android:onClick="goToThemeChange"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoToTheme"
        android:background="@drawable/button_selector"
        android:textColor="?android:attr/colorAccent"
        android:textSize="24sp"
        android:layout_below="@+id/buttonGoToNearestStation"
        android:layout_marginBottom="10dp"
        android:layout_alignStart="@+id/buttonGoToStationChoosing" />

    <Button
        android:text="@string/btnTrip"
        android:onClick="goToTripPlanner"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGoToStationChoosing"
        android:background="@drawable/button_selector"
        android:textColor="?android:attr/colorAccent"
        android:textSize="24sp"
        android:layout_below="@+id/imageViewTransBlinkLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dip"
        />

    <ImageView
        android:layout_width="250dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/image_border"
        android:layout_height="180dip"
        app:srcCompat="@drawable/transblinktransparent"
        android:id="@+id/imageViewTransBlinkLogo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
